Added components to belonging views, minor changes to App.vue appearance, cleaned App.vue code

--- a/src/assets/css/views-style.css
+++ b/src/assets/css/views-style.css
@@ -1,8 +1,4 @@
-.main-content {
-	width: 80%;
-}
-@media (max-width:900px) {
-	.main-content {
-		width: 95%;
-	}
+html, body {
+	height: 1500px;
+	margin-bottom: 100px;
 }
