Code clean, quality of life improvements

--- a/src/assets/css/views-style.css
+++ b/src/assets/css/views-style.css
@@ -2,3 +2,19 @@ html, body {
 	height: 1500px;
 	margin-bottom: 100px;
 }
+
+/* also for components */
+/*h3 {
+  margin: 40px 0 0;
+}
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+li {
+  display: inline-block;
+  margin: 0 10px;
+}
+a {
+  color: #42b983;
+}*/
