--- a/src/assets/css/views-style.css
+++ b/src/assets/css/views-style.css
@@ -2,7 +2,12 @@ html, body {
 	height: 1500px;
 	margin-bottom: 100px;
 }
-
+.flex-div {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	flex-wrap: wrap;
+}
 /* also for components */
 /*h3 {
   margin: 40px 0 0;
