--- a/src/assets/css/views-style.css
+++ b/src/assets/css/views-style.css
@@ -5,8 +5,11 @@ html, body {
 .flex-div {
 	display: flex;
 	flex-direction: row;
-	justify-content: center;
+	justify-content: space-around;
 	flex-wrap: wrap;
+}
+.router-link {
+	text-decoration: none;
 }
 /* also for components */
 /*h3 {
