Added new routes for item details, creted new views for said routes, found way of linking and made it look good

--- a/src/assets/css/views-style.css
+++ b/src/assets/css/views-style.css
@@ -6,4 +6,8 @@
 }
 .router-link {
 	text-decoration: none;
+	color: #000000 !important;
+}
+.router-link:hover {
+	text-shadow: 2px 2px 4px #696969;
 }
